# batch-ingestion-project

./: LICENSE  README.md  main.py  pyproject.toml  template.py
notebooks/: eda.ipynb
sql/ddl/: create_customer_tbl.sql  create_product_tbl.sql  create_sales_tbl.sql
src/batch_ingestion_project/config/: extraction_config.py  settings.py
src/batch_ingestion_project/database/: connection.py
src/batch_ingestion_project/etl/: extract.py  load.py
src/batch_ingestion_project/models/: base.py  customer.py  product.py  sales.py
