[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "batch-ingestion-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.27",
]

[tool.uv.build-backend]
module-name = "batch_ingestion_project"


[project.optional-dependencies]
dev = ["ruff==0.4.4", "setuptools_scm>=8.2.0"]

[tool.setuptools_scm]
write_to = "_version.py"
version_scheme = "release-branch-semver"

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "W", "I", "C", "B"]
lint.ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.bandit]
exclude_dirs = ["src/tests", "docs", "build", "dist", "venv", ".venv"]
skips = ["B101"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disable_error_code = "misc"
